--- a/src/app/pages/signup.html
+++ b/src/app/pages/signup.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta content="width=device-width, initial-scale=1" name="viewport">
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="image/icon.png">
-    <link rel="stylesheet" href="style/style.css">
+    <link href="image/icon.png" rel="icon">
+    <link href="style/style.css" rel="stylesheet">
     <title>Tacobyte</title>
 </head>
 <body style="background-image:url('https://pizzabyte.club/ok/image.png');">
-<div style="text-align: center;"><h1 class="title" > Welcome to Tacobyte </h1></div>
+<div style="text-align: center;"><h1 class="title"> Welcome to Tacobyte </h1></div>
 <span class="link2"> register your account </span>
 
 <form METHOD="POST" class="login">
@@ -17,24 +17,24 @@
 
         <br class="mhoe">
         <label>
-            <input type="text" name="username" class="input" placeholder="Create username">
+            <input class="input" name="username" placeholder="Create username" type="text">
         </label>
         <p class="space1"></p>
     </div>
     <div class="form-group ">
         <label>
-            <input type="password" name="password" class="input" placeholder="Create password">
+            <input class="input" name="password" placeholder="Create password" type="password">
         </label>
         <p class="space1"></p>
     </div>
     <div class="form-group ">
         <label>
-            <input type="password" name="confirm_password" class="input" placeholder="Confirm password">
+            <input class="input" name="confirm_password" placeholder="Confirm password" type="password">
         </label>
         <p class="space2"></p>
     </div>
     <div class="form-group">
-        <input type="submit" class="button" value="Submit">
+        <input class="button" type="submit" value="Submit">
     </div>
 </form>
 </body>
